# SciHTML

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
cmake/Modules/: CheckOutOfSourceBuild.cmake  FindQScintilla2.cmake
src/: CMakeLists.txt  SciHTML.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowsci.cpp  mainwindowsci.h  mainwindowsci.ui  src.pro
